--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is an app to create public and private stories",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app",
-    "dev": "cross-env NODE_ENV=development nodemon app"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js"
   },
   "author": "Jobayer Ahmed",
   "license": "ISC",
