--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "story-hub",
   "version": "1.0.0",
   "description": "This is an app to create public and private stories",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index",
     "dev": "cross-env NODE_ENV=development nodemon index"
